<resources>

    <!-- Store -->
    <string name="app_name">NewLiquidApp</string>
    <string name="Ask" translatable="false">Ask</string>
    <string name="Lagonis" translatable="false">Lagonis</string>
    <string name="Hugzord" translatable="false">Hugzord</string>
    <string name="nitr0" translatable="false">nitr0</string>
    <string name="NAF" translatable="false">NAF</string>
    <string name="ELiGE" translatable="false">ELiGE</string>
    <string name="oSee" translatable="false">oSee</string>
    <string name="YEKINDAR" translatable="false">YEKINDAR</string>
    <string name="Naxy" translatable="false">Naxy</string>
    <string name="Daiki" translatable="false">Daiki</string>
    <string name="Bstrdd" translatable="false">Bstrdd</string>
    <string name="Nat1" translatable="false">Nat1</string>
    <string name="Drn" translatable="false">Drn</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Password</string>
    <string name="Pulga" translatable="false">Pulga</string>
    <string name="Suetam" translatable="false">Suetam</string>
    <string name="Persa" translatable="false">Persa</string>
    <string name="Seeyun" translatable="false">Seeyun</string>
    <string name="PulgaShorts">LIQUID X FORTNITE PULGA SHORTS</string>
    <string name="JoggerLiquid">LIQUID LOGO JOGGERS</string>
    <string name="ParteDeBaixo">ALL BOTTOMS</string>
    <string name="ParteDeCima">ALL TOPS</string>
    <string name="PijamaLiquid" translatable="false">THE BLUE CAPSULE</string>
    <string name="UrsinhoBlue">BLUE PLUSH 2.0</string>
    <string name="Esportivo">ALL ATHLETICS</string>
    <string name="Acessórios">ALL ACCESSORIES</string>
    <string name="HomemAranha">LIQUID X MARVEL | JERSEY HOMEM-ARANHA</string>
    <string name="ViuvaNegra">LIQUID X MARVEL | JERSEY VIÚVA NEGRA</string>
    <string name="CapitaoAmerica">LIQUID X MARVEL | JERSEY CAPITÃO AMÉRICA</string>
    <string name="HoodieSpiderMan">LIQUID X MARVEL | HOMEM ARANHA ARTWORK HOODIE</string>
    <string name="shirtSpiderMan">LIQUID X MARVEL | HOMEM ARANHA ARTWORK SHORT SLEEVE TEE</string>
    <string name="ReinoQuantico">LIQUID X MARVEL VINGADORES | ULTIMATO JERSEY TRAJE REINO QUÂNTICO</string>
    <string name="JerseyAzul">TEAM LIQUID BRAZIL EXCLUSIVE JERSEY</string>
    <string name="MoletomLiquid"> TEAM LIQUID OFFICIAL 2021 JERSEY HOODIE SPONSORS</string>
    <string name="JerseyBrancaPatrocinio">TEAM LIQUID CHAMPIONSHIP JERSEY SPONSORED</string>
    <string name="JerseyAzulPatrocinio">TEAM LIQUID BRAZIL EXCLUSIVE JERSEY SPONSIVE</string>
    <string name="JerseyBranca">TEAM LIQUID CHAMPIONSHIP JERSEY </string>
    <string name="LiquidxMarvel">TEAM LIQUID X MARVEL </string>
    <string name="LiquidxFortnite">TEAM LIQUID X FORTNITE </string>
    <string name="CamisetaLiquidLinhaBranca">LIQUID TAPING SHORT SLEEVE TEE </string>
    <string name="CamisetaLiquidBranca">BRAZIL EXCLUSIVE - GEOS SHORT SLEEVE TEE - BRANCA </string>
    <string name="CamisetaLiquidPreta">BRAZIL EXCLUSIVE - GEOS SHORT SLEEVE TEE - PRETO </string>
    <string name="CamisetaLiquidAzulEscuro">BRAZIL EXCLUSIVE - GEOS SHORT SLEEVE TEE - AZUL </string>
    <string name="FortniteCalça">LIQUID X FORTNITE REBOOT TRACK PANTS</string>
    <string name="Jersey2021Sponsored">TEAM LIQUID OFFICIAL 2021 JERSEY SPONSORED</string>
    <string name="Tournaments">TOURNAMENTS</string>
    <string name="Players">PLAYERS</string>
    <string name="Store">STORE</string>
    <string name="Welcome">WELCOME</string>
    <string name="NewAccount">New Account</string>
    <string name="Back">Back</string>
    <string name="Login">Login</string>
    <string name="Models">Models</string>
    <string name="LAUNCHLIQUIDXMARVEL">LAUNCH LIQUID X MARVEL</string>
    <string name="JERSEY2021sponsored">JERSEY2021sponsored</string>
    <string name="BLUE_PAJAMA_SET">BLUE PAJAMA SET</string>
    <string name="BLUE_PAJAMA_PRICE">USD: 75,83</string>
    <string name="Mousepad_Liquid">LETS GO LIQUID MOUSEPAD (45X40 CM)</string>
    <string name="Mousepad_Pulga">LIQUID X FORTNITE PULGA MOUSE PAD</string>
    <string name="Mousepad_BlueCapsule">TEAM LIQUID BLUE PATTERN MOUSEPAD 88.9CM X 40.64CM</string>
    <string name="Mousepad_Fortnite">LIQUID X FORTNITE REBOOT MOUSE PAD</string>
    <string name="Mousepad_LiquidMaior">LETS GO LIQUID MOUSEPAD (88X40 CM)</string>
    <string name="LIQUID_LANGUAGES_LANYARD">LIQUID LANGUAGES LANYARD</string>
    <string name="TEAM_LIQUID_SLIPPERS">TEAM LIQUID SLIPPERS</string>
    <string name="BLUE_SLIPPERS">BLUE SLIPPERS</string>
    <string name="LIQUID_ESSENTIALS_DAD_HAT_V2_PRETO">LIQUID ESSENTIALS DAD HAT V2 - BLACK</string>
    <string name="Create_your_account">Create your account</string>
    <string name="Name">Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="liquid_essentials_dad_hat_v2___azul">LIQUID ESSENTIALS DAD HAT V2 BLUE</string>
    <string name="basics_snapback_hat___azul">BASICS SNAPBACK HAT BLUE</string>
    <string name="liquid_x_fortnite_pulga_socks">LIQUID PULGA SOCKS</string>
    <string name="liquid_x_fortnite_buffed_beanie">LIQUID X FORTNITE BUFFED BEANIE</string>
    <string name="liquid_x_fortnite_reboot_5_panel_hat">LIQUID X FORTNITE REBOOT 5 PANEL HAT</string>
    <string name="basics_snapback_hat___preto">BASICS SNAPBACK HAT BLACK</string>
    <string name="Jersey2021">Jersey2021</string>
    <string name="Age">Age</string>
    <string name="Social_Midias">Social Midias</string>
    <string name="Nickname">Nickname:</string>
    <string name="enter_in_your_account">Do you have an account?</string>
    <string name="Nesk" translatable="false">Nesk</string>
    <string name="Paluh" translatable="false">Paluh</string>
    <string name="Resetz" translatable="false">Resetz</string>
    <string name="JerseyViuvaNegra">Jersey Black Widow</string>
    <string name="Phoenix" translatable="false">Phoenix</string>
    <string name="DescricaoLink">Click on the link to go to the website of TeamLiquid</string>
    <string name="ModelsBrazilExclusive">Models Brazil Exclusive</string>
    <string name="Jersey2021_withoutSponsored">TEAM LIQUID OFFICIAL 2021 JERSEY</string>


    <!-- String para colocar os links do sites -->


    <string name="LinkCapitaoAmericano"><a href="https://loja.teamliquid.com.br/collections/team-liquid-x-marvel/products/lxm0116-blu-blue-liquid-x-marvel-captain-america-jersey/">Store Team Liquid</a></string>
    <string name="LinkHomemAranha"><a href="https://loja.teamliquid.com.br/collections/team-liquid-x-marvel/products/lxm0119-red-red-liquid-x-marvel-spider-man-jersey/">Store Team Liquid</a></string>
    <string name="LinkJogger"><a href="https://loja.teamliquid.com.br/collections/joggers/products/tl0535-blk-black-liquid-logo-joggers/">Store Team Liquid</a></string>
    <string name="LinkLiquidTaping"><a href="https://loja.teamliquid.com.br/collections/shirts/products/tl0104-blk-black-liquid-taping-short-sleeve-tee/">Store Team Liquid</a></string>
    <string name="LinkExclusiveBlack"><a href="https://loja.teamliquid.com.br/collections/shirts/products/tl0259-blk-black-brazil-exclusive-geos-short-sleeve-tee-black/">Store Team Liquid</a></string>
    <string name="testeLink" translatable="false">Hyperlink_textview</string>
    <string name="ExclusiveWhite"><a href="https://loja.teamliquid.com.br/collections/shirts/products/tl0259-wht-white-brazil-exclusive-geos-short-sleeve-tee-white/">Store Team Liquid</a></string>
    <string name="Jersey2021Oficial_withoutSponsored"><a href="https://loja.teamliquid.com.br/products/tl0230-bwh-blue-white-team-liquid-official-2021-jersey-sponsors/">Store Team Liquid</a></string>
    <string name="JerseyBrazilEclusiveBlue"><a href="https://loja.teamliquid.com.br/collections/athletics/products/tl0515-blu-blue-lvth_n-jersey-brazil-sponsored/">Store Team Liquid</a></string>


    <!-- Liquid + -->
    <string name="Liquid_Plus" translatable="false">Liquid +</string>
    <string name="Name_Torcedor" translatable="false">Gustavo</string>
    <string name="MemberStatus">MEMBER STATUS</string>
    <string name="ELITE">ELITE</string>
    <string name="FanSince">FanSince</string>
    <string name="Year" translatable="false">2019</string>
    <string name="Number" translatable="false">70.265</string>
    <string name="Number02" translatable="false">65.135</string>
    <string name="Number03" translatable="false">146.120</string>
    <string name="PointsPlus">Points Plus</string>
    <string name="PointsToSpend">Points To Send</string>
    <string name="StatusDeMembro">MEMBER STATUS</string>
    <string name="LifePoints">LIFE POINTS</string>
    <string name="Experience">EXPERIENCE</string>
    <string name="Status">STATUS</string>
    <string name="Shop">SHOP</string>
    <string name="Schedule">SCHEDULE</string>
    <string name="More">MORE</string>
    <string name="Home">HOME</string>
</resources>



